<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginBottom="30dp"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:layout_marginTop="5dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggest"
        android:id="@+id/suggest"
        android:layout_marginLeft="60dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Usage"
        android:id="@+id/usage_graph"
        android:layout_marginLeft="40dp"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/Operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/operator"
            android:layout_marginLeft="75dp"/>

        <TextView
            android:id="@+id/local_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Value"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#43bd00"
            android:layout_marginLeft="80dp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/Operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Local Sec"
            android:layout_marginLeft="70dp"/>

        <TextView
            android:id="@+id/local_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Value"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#43bd00"
            android:layout_marginLeft="90dp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/Operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="STD Min"
            android:layout_marginLeft="70dp" />

        <TextView
            android:id="@+id/std_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Value"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="100dp"
            android:textColor="#43bd00" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/Operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="STD Sec"
            android:layout_marginLeft="70dp"/>

        <TextView
            android:id="@+id/std_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Value"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="100dp"
            android:textColor="#43bd00" />


    </LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:gravity="center">
    <Button
        android:id="@+id/btnPost"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="CLICK ME" />

</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:id="@+id/tvIsConnected"
            />
        </LinearLayout>



</LinearLayout>


